Fix the text alignment for top errors, hosts, and domains

--- a/pegasus/metrics/static/style.css
+++ b/pegasus/metrics/static/style.css
@@ -125,3 +125,20 @@ td.error {
     white-space: pre-wrap;
 }
 
+#top_errors tr td:nth-of-type(1), #top_errors tr td:nth-of-type(2) {
+    text-align: right;
+}
+
+#top_domains td:nth-of-type(1),
+#top_domains td:nth-of-type(3),
+#top_domains td:nth-of-type(4),
+#top_domains td:nth-of-type(5) {
+    text-align: right;
+}
+
+#top_hosts td:nth-of-type(1),
+#top_hosts td:nth-of-type(3),
+#top_hosts td:nth-of-type(4),
+#top_hosts td:nth-of-type(5) {
+    text-align: right;
+}
